# nexus-urs-gloggner

./: .gitignore  .mcp.json  .pre-commit-config.yaml  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  codecov.yml  pyproject.toml  release-please-config.json  services.yaml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/scripts/: generate-services-tfvars.py  log-to-d1.sh  sync-deployed-state.sh  sync-firewall-rules.sh
.github/workflows/: cleanup-orphaned-resources.yml  destroy-all.yml  initial-setup.yaml  migrate-volume-to-r2.yml  python-tests.yml  release-please.yml  setup-control-plane.yaml  spin-up.yml  sync-docs-site.yml  teardown.yml  toggle-silent-mode.yml  validate-workflows.yaml
control-plane/: DEPLOYMENT.md  README.md  SECURITY.md  package-lock.json  package.json  schema.sql  wrangler.toml
docs/: CONTRIBUTING.md
docs/admin-guides/: debugging.md  docs-website-sync.md  migration-to-python.md  setup-guide.md  ssh-access.md  troubleshooting.md
docs/proposals/: 0001-s3-persistence.md
docs/stacks/: README.md  adminer.md  akhq.md  appsmith.md  big-agi.md  budibase.md  chroma.md  clickhouse.md  cloudbeaver.md  code-server.md  crawl4ai.md  dagster.md  debezium.md  dify.md  dinky.md  drawio.md  excalidraw.md  filestash.md  flink.md  garage.md  git-proxy.md  gitea.md  grafana.md  hoppscotch.md  infisical.md  it-tools.md  jupyter.md  kafdrop.md  kafka-ui.md  kestra.md  lakefs.md  mage.md  mailpit.md  marimo.md  meltano.md  metabase.md  minio.md  n8n.md  nocodb.md  ollama.md  (+29 more)
docs/tutorials/: index.md
docs/user-guides/: control-plane.md  dashboard.md  firewall.md  integrations.md  kestra-flow-editing.md  monitoring.md  secrets.md  settings.md  stacks.md
examples/: README.md
scripts/: capture-phase1-baselines.sh  check-cloudflare-pages-logs.sh  check-control-plane-env.sh  cleanup-orphaned-resources.sh  cleanup-s3-bucket.sh  deploy.sh  init-r2-state.sh  init-s3-bucket.sh  parse-services-yaml.sh  setup-control-plane-secrets.sh
src/nexus_deploy/: README.md  __init__.py  __main__.py  _remote.py  cli.py  compose_restart.py  compose_runner.py  config.py  firewall.py  gitea.py  hetzner_capacity.py  infisical.py  kestra.py  orchestrator.py  pipeline.py  r2_tokens.py  s3_persistence.py  s3_restore.py  secret_sync.py  seeder.py  service_env.py  services.py  setup.py  ssh.py  stack_sync.py  tfvars.py  tofu.py  workspace_coords.py
stacks/adminer/: docker-compose.yml
stacks/akhq/: docker-compose.yml
stacks/appsmith/: docker-compose.yml
stacks/big-agi/: docker-compose.yml
stacks/budibase/: docker-compose.yml
stacks/chroma/: docker-compose.yml
stacks/clickhouse/: docker-compose.yml
stacks/cloudbeaver/: docker-compose.yml
stacks/code-server/: Dockerfile  docker-compose.yml
stacks/crawl4ai/: docker-compose.yml
stacks/cyberchef/: docker-compose.yml
stacks/dagster/: Dockerfile  dagster.yaml  docker-compose.yml  workspace.yaml
stacks/debezium/: docker-compose.yml
stacks/dify/: docker-compose.yml
stacks/dinky/: Dockerfile  docker-compose.yml
stacks/drawio/: docker-compose.yml
stacks/excalidraw/: docker-compose.yml
stacks/filestash/: docker-compose.yml
stacks/flink/: Dockerfile  docker-compose.yml
stacks/garage/: docker-compose.yml  garage.toml
stacks/git-proxy/: docker-compose.yml  nginx.conf
stacks/gitea/: docker-compose.yml
stacks/grafana/: docker-compose.yml  loki-config.yml  prometheus.yml  promtail-config.yml
stacks/hoppscotch/: .env.template  docker-compose.yml
stacks/infisical/: docker-compose.yml
stacks/it-tools/: docker-compose.yml
stacks/jupyter/: Getting_Started_PySpark.ipynb  docker-compose.yml  pyspark-kernel.json  setup-s3a-jars.sh  spark-init.py
stacks/kafdrop/: docker-compose.yml
stacks/kafka-ui/: docker-compose.yml
stacks/kestra/: docker-compose.yml
stacks/lakefs/: docker-compose.yml
stacks/mage/: docker-compose.yml
stacks/mailpit/: docker-compose.yml
stacks/marimo/: Dockerfile  docker-compose.yml
stacks/meltano/: docker-compose.yml
stacks/metabase/: docker-compose.yml
stacks/minio/: docker-compose.yml  minio-databricks-connectivity-test.py
stacks/n8n/: docker-compose.yml
stacks/nocodb/: docker-compose.yml
stacks/ollama/: docker-compose.yml
stacks/openmetadata/: docker-compose.yml  init-db.sh
stacks/pg-ducklake/: docker-compose.yml
stacks/pgadmin/: docker-compose.yml  servers.json
stacks/portainer/: docker-compose.yml
stacks/postgres/: docker-compose.yml  postgres-databricks-connectivity-test.py
stacks/prefect/: docker-compose.yml
stacks/quickwit/: docker-compose.yml
stacks/redpanda/: docker-compose.yml  redpanda-databricks-connectivity-test.py
stacks/redpanda-connect/: config.yaml  docker-compose.yml
stacks/redpanda-console/: docker-compose.yml
stacks/redpanda-datagen/: config.yaml  docker-compose.yml
stacks/risingwave/: docker-compose.yml
stacks/rustfs/: docker-compose.yml
stacks/s3manager/: docker-compose.yml
stacks/seaweedfs/: docker-compose.yml
stacks/sftpgo/: docker-compose.yml
stacks/sling/: Dockerfile  docker-compose.yml
stacks/soda/: Dockerfile  docker-compose.yml
stacks/spark/: Dockerfile  docker-compose.yml
stacks/superset/: docker-compose.yml
stacks/telegraf/: docker-compose.yml  telegraf.conf
stacks/trino/: config.properties  docker-compose.yml
stacks/uptime-kuma/: docker-compose.yml
stacks/vector/: docker-compose.yml  vector.yaml
stacks/wetty/: docker-compose.yml
stacks/wikijs/: docker-compose.yml
stacks/windmill/: docker-compose.yml
stacks/woodpecker/: docker-compose.yml
tests/: conftest.py
tests/fixtures/: secrets_full.json  secrets_minimal.json
tests/unit/: test_compose_restart.py  test_compose_runner.py  test_config.py  test_firewall.py  test_gitea.py  test_hetzner_capacity.py  test_infisical.py  test_kestra.py  test_orchestrator.py  test_pipeline.py  test_r2_tokens.py  test_remote.py  test_s3_persistence.py  test_s3_restore.py  test_secret_sync.py  test_seeder.py  test_select_capacity_cli.py  test_services.py  (+8 more)
(+115 files in other folders)
